REFACTOR: Added style and symbol for  accuracy and time

--- a/TypingSpeedApp/typing_speed.html
+++ b/TypingSpeedApp/typing_speed.html
@@ -29,11 +29,11 @@
                 <div class="error_val">0</div>
             </div>
             <div class="time">
-                <div class="text">Time</div>
+                <div class="text">Time(s)</div>
                 <div class="timer_val">60</div>
             </div>
             <div class="accuracy">
-                <div class="text">Accuracy</div>
+                <div class="text">% Accuracy</div>
                 <div class="accuracy_val">100</div>
             </div>
         </div>
